# TokenReductionTool-BDO

./: .bdostaleignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  README_ja.md  SECURITY.md  dist-workspace.toml  install.sh  release-please-config.json
.github/workflows/: release.yml
Formula/: bdo.rb
docs/: TELEMETRY.md
docs/bushido/: MAINTENANCE_PLAN.md  qiita-article.md
docs/bushido/qiita/: .gitignore
docs/contributing/: ARCHITECTURE.md  CODING_PRACTICES.md  TECHNICAL.md
docs/guide/: index.md
docs/guide/analytics/: discover.md  gain.md
docs/guide/getting-started/: configuration.md  installation.md  quick-start.md  supported-agents.md
docs/guide/resources/: telemetry.md  troubleshooting.md  what-rtk-covers.md
docs/maintainers/: MAINTAINERS_APPLY.md
docs/usage/: AUDIT_GUIDE.md  FEATURES.md  TRACKING.md
hooks/: README.md
hooks/antigravity/: README.md  rules.md
hooks/claude/: README.md  bdo-awareness.md  bdo-rewrite.sh  rtk-rewrite.sh  test-bdo-rewrite.sh  test-rtk-rewrite.sh
hooks/cline/: README.md  rules.md
hooks/codex/: README.md  bdo-awareness.md
hooks/copilot/: README.md  rtk-awareness.md  test-bdo-rewrite.sh  test-rtk-rewrite.sh
hooks/cursor/: README.md  bdo-rewrite.sh  rtk-rewrite.sh
hooks/hermes/: README.md
hooks/hermes/bdo-rewrite/: __init__.py  plugin.yaml
hooks/hermes/tests/: test_bdo_rewrite_plugin.py
hooks/kilocode/: README.md  rules.md
hooks/opencode/: README.md  bdo.ts
hooks/pi/: README.md  bdo.ts
hooks/windsurf/: README.md  rules.md
openclaw/: README.md  index.ts  openclaw.plugin.json  package.json
scripts/: bdo-economics.sh  benchmark.sh  bushido-check.sh  bushido-token-benchmark.sh  check-installation.sh  install-local.sh  test-all.sh  test-aristote.sh  test-install.sh  test-ruby.sh  test-tracking.sh  validate-docs.sh
scripts/benchmark/: cleanup.ts  cloud-init.yaml  run.ts
scripts/benchmark-sessions/lib/: runner.py
scripts/benchmark/lib/: report.ts  test.ts  vm.ts
src/: main.rs
src/analytics/: README.md  cc_economics.rs  gain.rs  session_cmd.rs
src/cmds/: README.md
src/cmds/cloud/: aws_cmd.rs  (+3 more)
src/core/: README.md  changes.rs  config.rs  constants.rs  filter.rs  mod.rs  outline.rs  redact.rs  residue.rs  runner.rs  stream.rs  tee.rs  telemetry.rs  telemetry_cmd.rs  testplan.rs  toml_filter.rs  tracking.rs  utils.rs
src/discover/: README.md  mod.rs  registry.rs  report.rs  rules.rs
src/filters/: README.md
src/hooks/: README.md  constants.rs  hook_audit_cmd.rs  hook_check.rs  hook_cmd.rs  init.rs  integrity.rs  permissions.rs  rewrite_cmd.rs  trust.rs
src/learn/: README.md  report.rs
src/parser/: README.md  mod.rs
tests/: test_changed_multilang.rs
(+33 files in other folders)
