[package]
name = "bushido"
version = "0.44.8"
edition = "2021"
rust-version = "1.91"
authors = ["Patrick Szymkowiak"]
# Kept ≤80 chars so the generated Homebrew formula's `desc` line stays under
# rubocop's 118-column limit (the longer form tripped `brew style` at 119).
description = "High-performance CLI proxy that minimizes LLM token consumption (fork of rtk)."
license = "Apache-2.0"
homepage = "https://github.com/tedorigawa001/TokenReductionTool-BDO"
repository = "https://github.com/tedorigawa001/TokenReductionTool-BDO"
readme = "README.md"
keywords = ["cli", "llm", "token", "filter", "productivity"]
categories = ["command-line-utilities", "development-tools"]

# Binary is invoked as `bdo`; the crate/package is `bushido`.
[[bin]]
name = "bdo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
ignore = "0.4"
walkdir = "2"
regex = "1"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
colored = "2"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
chrono = "0.4"
tempfile = "3"
sha2 = "0.10"
ureq = "2"
getrandom = "0.4"
flate2 = "1.0"
quick-xml = "0.37"
which = "8"
automod = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
toml = "0.8"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# NOTE: must stay "unwind" (the default). The fail-safe guarantee — if a filter
# panics on adversarial command output, fall back to raw instead of losing it —
# relies on `catch_unwind` in core::runner / core::stream, which is a no-op under
# `panic = "abort"`. See ARCHITECTURE.md design principle #4 (Fail-Safe).
panic = "unwind"
strip = true

# The profile that 'dist' will build with. Inherits release unchanged so
# distributed binaries match local builds — including panic = "unwind",
# which the fail-safe guarantee depends on (see the release profile note).
[profile.dist]
inherits = "release"

# cargo-deb configuration
[package.metadata.deb]
maintainer = "Patrick Szymkowiak"
copyright = "2024 Patrick Szymkowiak"
license-file = ["LICENSE", "0"]
extended-description = "rtk filters and compresses command outputs before they reach your LLM context, saving 60-90% of tokens."
section = "utility"
priority = "optional"
assets = [
    ["target/release/bdo", "usr/bin/", "755"],
]
# cargo-generate-rpm configuration
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/bdo", dest = "/usr/bin/bdo", mode = "755" },
]

[lints.rust]
unsafe_code = "deny"
warnings = "deny"
